updated npm name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "utilis",
+    "name": "utilitas",
     "description": "Just another common utility for Node.js.",
     "version": "1989.06.04",
     "private": false,
