--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
     "homepage": "https://github.com/Leask/utilitas",
     "main": "index.js",
     "dependencies": {},
-    "devDependencies": {}
+    "devDependencies": {},
+    "license": "MIT"
 }
