--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "private": false,
     "homepage": "https://github.com/Leask/utilitas",
     "main": "index.js",
-    "dependencies": {},
+    "dependencies": {
+        "uuid": "^8.1.0"
+    },
     "devDependencies": {},
     "license": "MIT"
 }
