--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "homepage": "https://github.com/Leask/utilitas",
     "main": "index.js",
     "scripts": {
-        "debug": "node --inspect debug.js"
+        "debug": "node --inspect debug.js",
+        "prepublishOnly": "npm version patch && npm upgrade uuid && ( git commit -am 'npm upgrade uuid' || true ) && git pull && git push"
     },
     "dependencies": {
         "uuid": "^8.1.0"
