--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     },
     "author": "Leask Wong <i@leaskh.com>",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Leask/utilitas.git"
+    },
     "dependencies": {
         "uuid": "^8.1.0"
     },
