--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "mailgun-js": "^0.22.0",
         "mysql2": "^2.2.5",
+        "node-mailjet": "^3.3.1",
         "ping": "^0.2.3",
         "uuid": "^8.3.1"
     },
