--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "mysql2": "^2.2.5",
         "node-mailjet": "^3.3.1",
         "ping": "^0.3.0",
+        "telesignsdk": "^2.2.1",
+        "twilio": "^3.50.0",
         "uuid": "^8.3.1"
     }
 }
