--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "base64url": "^3.0.1",
         "colors": "^1.4.0",
         "ioredis": "^4.19.2",
+        "jsonwebtoken": "^8.5.1",
         "mailgun-js": "^0.22.0",
         "mysql2": "^2.2.5",
         "node-mailjet": "^3.3.1",
