--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "qs": "^6.9.4",
         "telesignsdk": "^2.2.1",
         "twilio": "^3.51.0",
-        "uuid": "^8.3.1"
+        "uuid": "^8.3.1",
+        "winston-3-papertrail": "^1.0.7"
     }
 }
