--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "telesignsdk": "^2.2.1",
         "twilio": "^3.51.0",
         "uuid": "^8.3.1",
+        "winston": "^3.3.3",
         "winston-3-papertrail": "^1.0.7"
     }
 }
