--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
         "twilio": "^3.51.0",
         "uuid": "^8.3.1",
         "winston": "^3.3.3",
-        "winston-3-papertrail": "^1.0.7"
+        "winston-3-papertrail": "github:Leask/winston-papertrail"
     }
 }
