--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@sentry/node": "^5.28.0",
         "base64url": "^3.0.1",
         "colors": "^1.4.0",
+        "fast-geoip": "^1.0.25",
         "ioredis": "^4.19.2",
         "jsonwebtoken": "^8.5.1",
         "mailgun-js": "^0.22.0",
@@ -31,6 +32,7 @@
         "node-fetch": "^2.6.1",
         "node-mailjet": "^3.3.1",
         "ping": "^0.3.0",
+        "public-ip": "^4.0.2",
         "qs": "^6.9.4",
         "telesignsdk": "^2.2.1",
         "twilio": "^3.53.0",
