--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "debug": "node --inspect --trace-warnings debug.js",
         "test": "node --inspect --trace-warnings test.js",
         "ncuinit": "npm install -g npm-check-updates",
-        "updep": "npx ncu -u && npm install && npm install file-type@16 && npm install node-fetch@2 && ( git commit -am 'update dependencies' || true )",
+        "updep": "npx ncu -u && npm install && npm install file-type@16 && npm install node-fetch@2 && npm install public-ip@4 && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
         "prepublishOnly": "npm version patch && npm run updep && npm run gitsync"
     },
@@ -35,7 +35,7 @@
         "node-fetch": "^2.6.6",
         "node-mailjet": "^3.3.4",
         "ping": "^0.4.1",
-        "public-ip": "^5.0.0",
+        "public-ip": "^4.0.4",
         "qs": "^6.10.2",
         "telesignsdk": "^2.2.1",
         "twilio": "^3.72.0",
