--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "version": "1989.8.84",
     "private": false,
     "homepage": "https://github.com/Leask/utilitas",
-    "main": "index.js",
+    "main": "index.mjs",
+    "type": "module",
     "scripts": {
         "start": "node index.js",
         "debug": "node --inspect --trace-warnings debug.js",
         "test": "node --inspect --trace-warnings test.js",
         "ncuinit": "npm install -g npm-check-updates",
-        "updep": "npx ncu -u && npm install && npm install file-type@16 && npm install node-fetch@2 && npm install public-ip@4 && npm install colors@1.4.0 && ( git commit -am 'update dependencies' || true )",
+        "updep": "npx ncu -u && npm install && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
         "prepublishOnlyOld": "npm version patch && npm run updep && npm run gitsync",
         "prepublishOnly": "npm version patch && npm run gitsync"
@@ -25,23 +26,23 @@
         "@sentry/node": "^6.16.1",
         "base64url": "^3.0.1",
         "colors": "1.4.0",
-        "fast-geoip": "^1.1.53",
-        "file-type": "^16.5.3",
+        "fast-geoip": "^1.1.54",
+        "file-type": "^17.1.1",
         "ini": "github:Leask/ini",
-        "ioredis": "^4.28.2",
+        "ioredis": "^4.28.3",
         "jsonwebtoken": "^8.5.1",
         "mailgun-js": "^0.22.0",
-        "mathjs": "^10.0.2",
+        "mathjs": "^10.1.0",
         "mysql2": "^2.3.3",
-        "node-fetch": "^2.6.6",
+        "node-fetch": "^3.1.1",
         "node-mailjet": "^3.3.4",
         "ping": "^0.4.1",
-        "public-ip": "^4.0.4",
-        "qs": "^6.10.2",
+        "public-ip": "^5.0.0",
+        "qs": "^6.10.3",
         "telesignsdk": "^2.2.1",
-        "twilio": "^3.72.0",
+        "twilio": "^3.73.0",
         "uuid": "^8.3.2",
-        "winston": "^3.3.4",
+        "winston": "^3.4.0",
         "winston-papertrail-mproved": "^1.0.7"
     }
 }
