moving forward to ESM only module

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "utilitas",
     "description": "Just another common utility for Node.js.",
-    "version": "1989.8.84",
+    "version": "1989.9.1",
     "private": false,
     "homepage": "https://github.com/Leask/utilitas",
     "main": "index.mjs",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "debug": "node --inspect --trace-warnings debug.js",
-        "test": "node --inspect --trace-warnings test.js",
+        "start": "node index.mjs",
+        "debug": "node --inspect --trace-warnings debug.mjs",
+        "test": "node --inspect --trace-warnings test.mjs",
         "ncuinit": "npm install -g npm-check-updates",
-        "updep": "npx ncu -u && npm install && ( git commit -am 'update dependencies' || true )",
+        "updep": "npx ncu -u && npm install && npm install node-fetch@2 && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
         "prepublishOnlyOld": "npm version patch && npm run updep && npm run gitsync",
         "prepublishOnly": "npm version patch && npm run gitsync"
@@ -34,7 +34,7 @@
         "mailgun-js": "^0.22.0",
         "mathjs": "^10.1.0",
         "mysql2": "^2.3.3",
-        "node-fetch": "^3.1.1",
+        "node-fetch": "^2.6.7",
         "node-mailjet": "^3.3.4",
         "ping": "^0.4.1",
         "public-ip": "^5.0.0",
