--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "ncuinit": "npm install -g npm-check-updates",
         "updep": "npx ncu -u && npm install && npm install node-fetch@2 && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
-        "prepublishOnlyOld": "npm version patch && npm run updep && npm run gitsync",
-        "prepublishOnly": "npm version patch && npm run gitsync"
+        "prepublishOnly": "npm version patch && npm run updep && npm run gitsync"
     },
     "author": "Leask Wong <i@leaskh.com>",
     "license": "MIT",
