--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "node-mailjet": "^3.3.5",
         "ping": "^0.4.1",
         "qs": "^6.10.3",
+        "telegraf": "^4.7.0",
         "telesignsdk": "^2.2.1",
         "twilio": "^3.73.0",
         "uuid": "^8.3.2",
