--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "node-mailjet": "^3.3.5",
         "ping": "^0.4.1",
         "qs": "^6.10.3",
+        "tail": "^2.2.4",
         "telegraf": "^4.7.0",
         "telesignsdk": "^2.2.1",
         "twilio": "^3.74.0",
