--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "ncuinit": "npm install -g npm-check-updates",
         "updep": "npx ncu -u && npm install && npm install node-fetch@2 && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
-        "prepublishOnly": "npm version patch && npm run updep && npm run gitsync"
+        "prepublishOnly": "npm version patch && npm run updep && npm run gitsync",
+        "xxx_build": "npx esbuild index.mjs --bundle --outfile=out.js",
+        "pack": "./node_modules/.bin/webpack-cli --config webpack.config.mjs"
     },
     "author": "Leask Wong <i@leaskh.com>",
     "license": "MIT",
@@ -45,5 +47,11 @@
         "telesignsdk": "^2.2.1",
         "twilio": "^3.75.1",
         "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "browserify-fs": "^1.0.0",
+        "node-polyfill-webpack-plugin": "^1.1.4",
+        "webpack": "^5.70.0",
+        "webpack-cli": "^4.9.2"
     }
 }
