--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
         "ncuinit": "npm install -g npm-check-updates",
         "updep": "npx ncu -u && npm install && npm install node-fetch@2 && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
-        "prepublishOnly": "npm version patch && npm run updep && npm run gitsync",
-        "xxx_build": "npx esbuild index.mjs --bundle --outfile=out.js",
-        "pack": "npx webpack-cli --config webpack.config.mjs"
+        "build": "npx webpack-cli --config webpack.config.mjs",
+        "prepublishOnly": "npm build && npm version patch && npm run updep && npm run gitsync"
     },
     "author": "Leask Wong <i@leaskh.com>",
     "license": "MIT",
