--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
         "colors": "1.4.0",
         "fast-geoip": "^1.1.63",
         "file-type": "^17.1.1",
+        "form-data": "^4.0.0",
         "ini": "github:Leask/ini",
         "ioredis": "^4.28.5",
         "jsonwebtoken": "^8.5.1",
-        "mailgun-js": "^0.22.0",
+        "mailgun.js": "^5.0.2",
         "mathjs": "^10.4.0",
         "mysql2": "^2.3.3",
         "node-fetch": "^3.2.3",
