--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "debug": "node --inspect --trace-warnings debug.mjs",
         "test": "node --inspect --trace-warnings test.mjs",
         "ncuinit": "npm install -g npm-check-updates",
-        "updep": "npx ncu -u && npm install && npm install node-fetch@2 && ( git commit -am 'update dependencies' || true )",
+        "updep": "npx ncu -u && npm install && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
-        "build": "./node_modules/.bin/webpack-cli --config webpack.config.mjs",
-        "prepublishOnly": "npm run build && npm version patch && npm run updep && npm run gitsync"
+        "build": "npm run updep && npm version patch && node build.mjs && ./node_modules/.bin/webpack-cli --config webpack.config.mjs",
+        "prepublishOnly": "npm run build && npm run gitsync"
     },
     "author": "Leask Wong <i@leaskh.com>",
     "license": "MIT",
