--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "debug": "node --inspect --trace-warnings debug.mjs",
         "test": "node --inspect --trace-warnings test.mjs",
         "ncuinit": "npm install -g npm-check-updates",
-        "updep": "npx ncu -u && npm install && ( git commit -am 'update dependencies' || true )",
-        "gitsync": "git pull && git push",
+        "updep": "npx ncu -u && npm install",
+        "gitsync": "( git commit -am '🍻 Released!' || true ) && git pull && git push",
         "build": "npm run updep && npm version patch && node build.mjs && ./node_modules/.bin/webpack-cli --config webpack.config.mjs",
         "prepublishOnly": "npm run build && npm run gitsync"
     },
