--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "test": "node --inspect --trace-warnings test.mjs",
         "updep": "npx ncu -u && npm install",
         "gitsync": "( git commit -am \"Released @ `date`\" || true ) && git pull && git push",
-        "build": "npm run updep && npm version patch && node build.mjs && ./node_modules/.bin/webpack-cli --config webpack.config.mjs",
+        "pack": "./node_modules/.bin/webpack-cli --config webpack.config.mjs",
+        "build": "npm run updep && npm version patch && node build.mjs && npm run pack",
         "prepublishOnly": "npm run build && npm run gitsync",
         "beta": "npm publish --tag beta"
     },
@@ -28,6 +29,7 @@
     "dependencies": {
         "@sentry/node": "^6.19.1",
         "base64url": "^3.0.1",
+        "buffer": "^6.0.3",
         "colors": "1.4.0",
         "fast-geoip": "^1.1.63",
         "file-type": "^17.1.1",
