--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start": "node index.mjs",
         "debug": "node --inspect --trace-warnings debug.mjs",
         "test": "node --inspect --trace-warnings test.mjs",
-        "updep": "npx ncu -u && npm install",
+        "updep": "npx ncu -u && npm install && wget https://raw.githubusercontent.com/Marak/colors.js/master/lib/styles.js -O ./lib/style.cjs",
         "gitsync": "( git commit -am \"Released @ `date`\" || true ) && git pull && git push",
         "pack": "./node_modules/.bin/webpack-cli --config webpack.config.mjs",
         "build": "npm run updep && ( git commit -am 'update dependencies' || true ) && npm version patch && node build.mjs && npm run pack",
@@ -30,7 +30,6 @@
         "@sentry/node": "^6.19.2",
         "base64url": "^3.0.1",
         "buffer": "^6.0.3",
-        "colors": "1.4.0",
         "fast-geoip": "^1.1.64",
         "file-type": "^17.1.1",
         "form-data": "^4.0.0",
