--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "node-fetch": "^3.2.3",
         "node-mailjet": "^3.3.7",
         "ping": "^0.4.1",
+        "qrcode": "^1.5.0",
         "tail": "^2.2.4",
         "telegraf": "^4.7.0",
         "telesignsdk": "^2.2.1",
