--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
         "mysql2": "^2.3.3",
         "node-fetch": "^3.2.3",
         "node-mailjet": "^3.3.13",
+        "nopt": "^5.0.0",
         "ping": "^0.4.1",
         "qrcode": "^1.5.0",
         "tail": "^2.2.4",
         "telegraf": "^4.7.0",
         "telesignsdk": "^2.2.1",
         "twilio": "^3.76.1",
-        "uuid": "^8.3.2",
-        "yargs-parser": "^21.0.1"
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "browserify-fs": "^1.0.0",
