testing github actions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "gitsync": "( git commit -am \"Released @ `date`\" || true ) && git pull && git push",
         "pack": "./node_modules/.bin/webpack-cli --config webpack.config.mjs",
         "build": "npm run updep && ( git commit -am 'update dependencies' || true ) && npm version patch && node build.mjs && npm run pack",
-        "prepublishOnly": "npm run build && npm run gitsync",
+        "xprepublishOnly": "npm run build && npm run gitsync",
         "beta": "npm publish --tag beta"
     },
     "author": "Leask Wong <i@leaskh.com>",
