adding version patch to github actions

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,8 +10,21 @@ on:
     branches: [ master ]
 
 jobs:
+  version:
+    runs-on: ubuntu-latest
+    if: "!startsWith(github.event.head_commit.message, '[RELEASE]')"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+      - run: git config --global user.name 'Leask Wong'
+      - run: git config --global user.email 'i@leaskh.com'
+      - run: npm version patch -m "[RELEASE] %s"
+      - run: git push
+
   build:
     runs-on: ubuntu-latest
+    needs: version
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
