--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
         "ini": "github:Leask/ini",
         "ioredis": "^5.3.0",
         "jsonwebtoken": "^9.0.0",
+        "luxon": "^3.2.1",
         "mailgun.js": "^8.0.6",
         "mathjs": "^11.5.0",
-        "moment": "^2.29.4",
         "mysql2": "^3.1.0",
         "node-mailjet": "^6.0.2",
         "nopt": "^7.0.0",
