--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "telegraf": "^4.12.0",
         "telesignsdk": "^2.2.3",
         "twilio": "^4.8.0",
+        "url": "github:Leask/node-url",
         "webpack-cli": "^5.0.1"
     }
 }
