--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "devDependencies": {
         "@google-cloud/speech": "^5.4.0",
         "@google-cloud/text-to-speech": "^4.2.1",
+        "@mozilla/readability": "^0.4.4",
         "@sentry/node": "^7.45.0",
         "@waylaidwanderer/chatgpt-api": "^1.33.0",
         "acme-client": "^5.0.0",
@@ -42,6 +43,7 @@
         "fast-geoip": "^1.1.88",
         "form-data": "^4.0.0",
         "ioredis": "^5.3.1",
+        "jsdom": "^21.1.1",
         "mailgun.js": "^8.2.1",
         "mysql2": "^3.2.0",
         "node-mailjet": "^6.0.2",
@@ -51,6 +53,7 @@
         "telesignsdk": "^2.2.3",
         "twilio": "^4.9.0",
         "url": "github:Leask/node-url",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "youtube-transcript": "^1.0.5"
     }
 }
