--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "form-data": "^4.0.0",
         "ioredis": "^5.3.1",
         "jsdom": "^21.1.1",
+        "lorem-ipsum": "^2.0.8",
         "mailgun.js": "^8.2.1",
         "mysql2": "^3.2.0",
         "node-mailjet": "^6.0.2",
