--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "mysql2": "^3.2.1",
         "node-mailjet": "^6.0.2",
         "node-polyfill-webpack-plugin": "^2.0.1",
+        "office-text-extractor": "^2.0.0",
         "ping": "^0.4.4",
         "telegraf": "^4.12.2",
         "telesignsdk": "^2.2.3",
