--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@ffprobe-installer/ffprobe": "^2.1.1",
         "@google-cloud/speech": "^5.6.0",
         "@google-cloud/text-to-speech": "^4.2.3",
         "@google-cloud/vision": "^3.1.4",
@@ -42,6 +44,7 @@
         "browserify-fs": "^1.0.0",
         "buffer": "^6.0.3",
         "fast-geoip": "^1.1.88",
+        "fluent-ffmpeg": "^2.1.2",
         "form-data": "^4.0.0",
         "ioredis": "^5.3.2",
         "jsdom": "^22.1.0",
