--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "say": "^0.16.0",
         "telegraf": "^4.12.2",
         "telesignsdk": "^2.2.3",
+        "tesseract.js": "^4.1.1",
         "twilio": "^4.14.0",
         "url": "github:Leask/node-url",
         "webpack-cli": "^5.1.4",
