--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "node-mailjet": "^6.0.4",
         "node-polyfill-webpack-plugin": "^2.0.1",
         "office-text-extractor": "^3.0.2",
+        "openai": "^4.16.1",
         "ping": "^0.4.4",
         "say": "^0.16.0",
         "telegraf": "^4.15.0",
