--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
         "@google-cloud/speech": "^6.1.0",
+        "@google-cloud/storage": "^7.6.0",
         "@google-cloud/text-to-speech": "^5.0.1",
         "@google-cloud/vision": "^4.0.2",
         "@mozilla/readability": "^0.4.4",
