adding pdfjs support

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "@google-cloud/text-to-speech": "^5.0.1",
         "@google-cloud/vision": "^4.0.2",
         "@mozilla/readability": "^0.4.4",
-        "@sentry/node": "^7.80.1",
+        "@sentry/node": "^7.83.0",
         "@waylaidwanderer/chatgpt-api": "^1.37.3",
         "acme-client": "^5.0.0",
         "browserify-fs": "^1.0.0",
@@ -48,24 +48,25 @@
         "fluent-ffmpeg": "^2.1.2",
         "form-data": "^4.0.0",
         "ioredis": "^5.3.2",
-        "jsdom": "^22.1.0",
+        "jsdom": "^23.0.0",
         "lorem-ipsum": "^2.0.8",
         "mailgun.js": "^9.3.0",
         "mime-types": "^2.1.35",
-        "mysql2": "^3.6.3",
-        "node-mailjet": "^6.0.4",
+        "mysql2": "^3.6.5",
+        "node-mailjet": "^6.0.5",
         "node-polyfill-webpack-plugin": "^2.0.1",
         "office-text-extractor": "^3.0.2",
-        "openai": "^4.19.0",
+        "openai": "^4.20.1",
+        "pdfjs-dist": "^4.0.269",
         "ping": "^0.4.4",
         "say": "^0.16.0",
-        "telegraf": "^4.15.0",
+        "telegraf": "^4.15.2",
         "telesignsdk": "^2.2.3",
         "tesseract.js": "^5.0.3",
         "twilio": "^4.19.0",
         "url": "github:Leask/node-url",
         "webpack-cli": "^5.1.4",
-        "whisper-node": "^0.2.12",
+        "whisper-node": "^1.1.1",
         "youtube-transcript": "^1.0.6"
     }
 }
