--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "openai": "^4.20.1",
         "pdfjs-dist": "^4.0.269",
         "pg": "^8.11.3",
+        "pgvector": "^0.1.5",
         "ping": "^0.4.4",
         "say": "^0.16.0",
         "telegraf": "^4.15.2",
