--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
         "type": "git",
         "url": "https://github.com/Leask/utilitas.git"
     },
+    "overrides": {
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
+    },
     "dependencies": {
         "file-type": "^18.7.0",
         "mathjs": "^12.1.0",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
         "@google-cloud/speech": "^6.1.0",
