--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
         "uuid": "^9.0.1"
     },
     "devDependencies": {
-        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
         "@google-cloud/speech": "^6.1.0",
@@ -43,6 +42,7 @@
         "@google-cloud/text-to-speech": "^5.0.1",
         "@google-cloud/vision": "^4.0.2",
         "@mozilla/readability": "^0.4.4",
+        "@ngrok/ngrok": "^0.9.1",
         "@sentry/node": "^7.86.0",
         "@waylaidwanderer/chatgpt-api": "^1.37.3",
         "acme-client": "^5.0.0",
@@ -73,6 +73,7 @@
         "url": "github:Leask/node-url",
         "webpack-cli": "^5.1.4",
         "whisper-node": "^1.1.1",
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
         "youtube-transcript": "^1.0.6"
     }
 }
