--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.1.3",
         "file-type": "^18.7.0",
         "mathjs": "^12.2.0",
         "uuid": "^9.0.1"
@@ -40,6 +41,7 @@
         "@google-cloud/speech": "^6.1.0",
         "@google-cloud/storage": "^7.7.0",
         "@google-cloud/text-to-speech": "^5.0.1",
+        "@google-cloud/vertexai": "^0.1.3",
         "@google-cloud/vision": "^4.0.2",
         "@mozilla/readability": "^0.4.4",
         "@ngrok/ngrok": "^0.9.1",
