--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "devDependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
+        "@google-cloud/aiplatform": "^3.9.0",
         "@google-cloud/speech": "^6.1.0",
         "@google-cloud/storage": "^7.7.0",
         "@google-cloud/text-to-speech": "^5.0.1",
