--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "fluent-ffmpeg": "^2.1.2",
         "form-data": "^4.0.0",
         "ioredis": "^5.3.2",
+        "js-tiktoken": "^1.0.8",
         "jsdom": "^23.0.1",
         "lorem-ipsum": "^2.0.8",
         "mailgun.js": "^9.4.0",
