--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "url": "github:Leask/node-url",
         "webpack-cli": "^5.1.4",
         "whisper-node": "^1.1.1",
+        "wrangler": "^3.25.0",
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
         "youtube-transcript": "^1.0.6"
     }
