--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@mozilla/readability": "^0.5.0",
         "@ngrok/ngrok": "^1.1.1",
         "@sentry/node": "^7.106.0",
+        "@sentry/profiling-node": "^7.106.0",
         "acme-client": "^5.3.0",
         "browserify-fs": "^1.0.0",
         "buffer": "^6.0.3",
