--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "pgvector": "^0.2.0",
         "ping": "^0.4.4",
         "process": "^0.11.10",
+        "puppeteer": "^23.3.0",
         "say": "^0.16.0",
         "telegraf": "^4.16.3",
         "telesignsdk": "^3.0.0",
