--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     },
     "devDependencies": {
         "@anthropic-ai/sdk": "^0.36.3",
+        "@anthropic-ai/vertex-sdk": "^0.7.0",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
         "@google-cloud/speech": "^6.7.0",
