--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "@google-cloud/text-to-speech": "^5.8.0",
         "@google-cloud/vision": "^4.3.2",
         "@google/generative-ai": "^0.21.0",
-        "@mozilla/readability": "^0.5.0",
+        "@mozilla/readability": "github:mozilla/readability",
         "@ngrok/ngrok": "^1.4.1",
         "@sentry/node": "^8.52.0",
         "@sentry/profiling-node": "^8.52.0",
