--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
     },
     "dependencies": {
-        "file-type": "^20.4.0",
+        "file-type": "^20.4.1",
         "mathjs": "^14.3.1",
         "uuid": "^11.1.0"
     },
@@ -39,14 +39,15 @@
         "@anthropic-ai/vertex-sdk": "^0.7.0",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
-        "@google-cloud/speech": "^6.7.1",
+        "@google-cloud/speech": "^7.0.0",
         "@google-cloud/storage": "^7.15.2",
-        "@google-cloud/text-to-speech": "^5.8.1",
-        "@google-cloud/vision": "^4.3.3",
+        "@google-cloud/text-to-speech": "^6.0.0",
+        "@google-cloud/vision": "^5.0.0",
+        "@google/genai": "^0.4.0",
         "@google/generative-ai": "^0.24.0",
         "@mozilla/readability": "github:mozilla/readability",
-        "@sentry/node": "^9.5.0",
-        "@sentry/profiling-node": "^9.5.0",
+        "@sentry/node": "^9.6.0",
+        "@sentry/profiling-node": "^9.6.0",
         "acme-client": "^5.4.0",
         "browserify-fs": "^1.0.0",
         "buffer": "^6.0.3",
@@ -64,9 +65,9 @@
         "node-mailjet": "^6.0.8",
         "node-polyfill-webpack-plugin": "^4.1.0",
         "office-text-extractor": "^3.0.3",
-        "openai": "^4.87.3",
-        "pdfjs-dist": "^4.10.38",
-        "pg": "^8.14.0",
+        "openai": "^4.87.4",
+        "pdfjs-dist": "^5.0.375",
+        "pg": "^8.14.1",
         "pgvector": "^0.2.0",
         "ping": "^0.4.4",
         "process": "^0.11.10",
@@ -79,7 +80,7 @@
         "url": "github:Leask/node-url",
         "webpack-cli": "^6.0.1",
         "whisper-node": "^1.1.1",
-        "wrangler": "^3.114.1",
+        "wrangler": "^4.1.0",
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
         "youtube-transcript": "^1.2.1"
     }
