Update .npmignore to exclude unnecessary files and directories. Add node_modules/ and build/ directories to ensure only essential files are included in npm package.

--- a/.npmignore
+++ b/.npmignore
@@ -2,10 +2,12 @@
 /.github
 /build.mjs
 /debug.mjs
+/config.json
 /gears
 /index.html
 /package-lock.json
 /template.md
 /test.mjs
+/tests
 /webpack.config.mjs
 eng.traineddata
