--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "fast-geoip": "^1.1.88",
         "fluent-ffmpeg": "^2.1.3",
         "form-data": "^4.0.5",
+        "google-gax": "^5.0.6",
         "ioredis": "^5.8.2",
         "js-tiktoken": "^1.0.21",
         "jsdom": "^27.2.0",
