--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "devDependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.1.2",
+        "@google-cloud/discoveryengine": "^2.5.2",
         "@google-cloud/storage": "^7.18.0",
         "@google/genai": "^1.31.0",
         "@mozilla/readability": "github:mozilla/readability",
