--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "acme-client": "^5.4.0",
         "browserify-fs": "^1.0.0",
         "buffer": "^6.0.3",
+        "fake-indexeddb": "^6.2.5",
         "fast-geoip": "^1.1.88",
         "fluent-ffmpeg": "^2.1.3",
         "form-data": "^4.0.5",
