--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start": "node index.mjs",
         "debug": "node --inspect --trace-warnings debug.mjs",
         "test": "node test.mjs",
-        "updep": "npx npm-check-updates -u && npm install && wget https://raw.githubusercontent.com/Marak/colors.js/master/lib/styles.js -O ./lib/style.cjs && wget https://raw.githubusercontent.com/sindresorhus/cli-boxes/refs/heads/main/boxes.json -O ./lib/boxes.json",
+        "updep": "npx npm-check-updates -u && npm install && wget https://raw.githubusercontent.com/Marak/colors.js/master/lib/styles.js -O ./lib/style.cjs",
         "gitsync": "( git commit -am \"Released @ `date`\" || true ) && git pull && git push",
         "pack": "./node_modules/.bin/webpack-cli --config webpack.config.mjs",
         "build": "npm run updep && ( git commit -am 'update dependencies' || true ) && node build.mjs && npm run pack",
